[project]
name = "terraform-vault-backend"
version = "0.4.0"
description = "A Vault backend for Terraform implemented as an HTTP server"
authors = [
  {name = "Emanuel Johnson Godin", email = "emanueljohnsongodin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "hvac>=2.4.0,<2.5.0",
    "uvicorn>=0.40.0",  # CVE-2025-43859
    "h11>=0.16.0",      # fix for CVE-2025-43859
]

[dependency-groups]
dev = [
  "ruff>=0.14.10",
  "mypy>=1.19.1",
  "pytest>=9",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tvb"]

