[project]
name = "terraform-vault-backend"
version = "0.4.1"
description = "A Vault backend for Terraform implemented as an HTTP server"
authors = [
  {name = "Emanuel Johnson Godin", email = "emanueljohnsongodin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.138.1",
    "hvac==2.4.0",
    "uvicorn==0.49.0",
    "starlette==0.49.1", # https://github.com/volvo-cars/terraform-vault-backend/pull/25
    "urllib3==2.6.3", # https://github.com/volvo-cars/terraform-vault-backend/pull/25
]

[dependency-groups]
dev = [
  "ruff==0.15.20",
  "mypy==2.1.0",
  "pytest==9.1.1",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tvb"]
